tests/negative/gold/typed-assign-local3-test.gold
tests/negative/typed-assign-local3-test.toit:12:4: error: Type mismatch. Expected 'A'. Got 'int'
  a++
   ^~
As check failed: an int (1) is not a A.
  0: main                      tests/negative/typed-assign-local3-test.toit:12:4
